--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -41,7 +41,7 @@ body {
 .logo span {
   display: block;
   font-size: 4rem;
-  font-weight: bold;
+  font-weight: semibold;
   color: #ffffff;
   margin-top: 10px;
   
@@ -52,7 +52,7 @@ body {
   left: 0;
 }
 .doctores img {
-  max-width: 113%;
+  max-width: 115%;
   height: auto;
 }
 
