--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -9,18 +9,20 @@ body {
 .container {
   display: flex;
   width: 100%;
-  height: 70vh;
+  height: 100vh;
 }
 
 /* Left Section */
 .left-section {
   background-image: url(../../../public/img/Fondo_curbo_del_login_y_registro.png);
+  background-color: #B0B9BC;
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 50%;
-  max-width: 50%;
+  max-width: 710px;
+  height: 100vh;
   padding: 20px;
   position: relative;
 }
