--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,11 @@
     <!-- Right Section -->
     <div class="right-section">
       <div class="login-form">
-        <h1>Welcome Back</h1>
+        <div class="right-header">
+          <h1>Inicio de Sesión</h1>
+          <p>¿Nuevo en Hospital Vita? <a href="#">Registrate</a></p>
+        </div>
+        
         <form>
           <div class="form-group">
             <label for="email">Email</label>
@@ -24,26 +28,26 @@
             <label for="password">Password</label>
             <input type="password" id="password" placeholder="Enter your password">
           </div>
-          <div class="form-options">
-            <label><input type="checkbox"> Remember me</label>
-            <a href="#">Forgot password?</a>
-          </div>
           <button type="submit" class="btn-primary">Login</button>
-          <div class="divider">
-            <span>Or continue with</span>
+          <div class="form-options">
+            <label><input type="checkbox"> Recuerdame</label>
+            <a href="#">¿He olvidado mi contraseña?</a>
           </div>
-          <button type="button" class="social-btn">
-            <img src="https://www.google.com/favicon.ico" alt="Google">
-            Continue with Google
-          </button>
-          <button type="button" class="social-btn">
-            <img src="https://www.facebook.com/favicon.ico" alt="Facebook">
-            Continue with Facebook
-          </button>
-          <button type="button" class="social-btn">
-            <img src="https://www.apple.com/favicon.ico" alt="Apple">
-            Continue with Apple
-          </button>
+          <div class="divider">
+            <span>O continua con</span>
+          </div>
+          <div  class="social-btn-group">
+            <button type="button" class="social-btn">
+              <img src="https://www.google.com/favicon.ico" alt="Google">
+            </button>
+            <button type="button" class="social-btn">
+              <img src="https://www.facebook.com/favicon.ico" alt="Facebook">
+            </button>
+            <button type="button" class="social-btn">
+              <img src="https://www.apple.com/favicon.ico" alt="Apple">
+            </button>
+          </div>
+          
         </form>
       </div>
     </div>
