--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -1,1 +1,62 @@
-<p>registro works!</p>
+
+<div class="container">
+    <!-- Left Section -->
+    <div class="left-section">
+      <div class="logo">
+        <img src="img/logo.png" alt="logo">
+        <span>Hospital vita</span>
+      </div>
+      <div class="doctores">
+        <img src="img/Medicos_del_login_y_registro.png" alt="Médicos" >
+      </div>
+    </div>
+  
+    <!-- Right Section -->
+    <div class="right-section">
+      <div class="login-form">
+        <div class="right-header">
+            <h1>Crear Cuenta</h1>
+            <p>¿Ya conoces Hospital Vita? <a href="#">Inicia sesion</a></p>
+        </div>
+        
+        <form>
+          <div class="form-group">
+            <label for="email">Email address</label>
+            <input type="email" id="email" placeholder="Introduzca su email">
+          </div>
+          <div class="form-group">
+            <label for="phone">Teléfono</label>
+            <input type="text" id="phone" placeholder="Introduzca su teléfono">
+          </div>
+          <div class="form-group">
+            <label for="password">Contraseña</label>
+            <input type="password" id="password" placeholder="Introduzca su fecha de contraseña">
+          </div>
+          <div class="form-group">
+            <label for="phone">Fecha de Nacimiento</label>
+            <input type="text" id="phone" placeholder="Introduzca su fecha de nacimiento">
+          </div>
+          <button type="submit" class="btn-primary">Registrate</button>
+          <div class="form-options">
+            <label><input type="checkbox"> Recuerdame</label>
+          </div>
+          <div class="divider">
+            <span>O continua con</span>
+          </div>
+          <div class="social-btn-group">
+            <button type="button" class="social-btn">
+                <img src="https://www.google.com/favicon.ico" alt="Google">
+            </button>
+            <button type="button" class="social-btn">
+                <img src="https://www.facebook.com/favicon.ico" alt="Facebook">
+            </button>
+            <button type="button" class="social-btn">
+                <img src="https://www.apple.com/favicon.ico" alt="Apple">
+            </button>
+          </div>
+          
+        </form>
+      </div>
+    </div>
+  </div>
+  
