--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,10 @@
 body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
   font-family: 'Inter', sans-serif;
   display: flex;
   justify-content: center;
@@ -8,6 +14,7 @@ body {
 
 .container {
   display: flex;
+  flex-wrap: wrap;
   width: 100%;
   height: 100vh;
 }
@@ -17,6 +24,7 @@ body {
   background-image: url(../../../public/img/Fondo_curbo_del_login_y_registro.png);
   background-color: #B0B9BC;
   background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -46,13 +54,14 @@ body {
   font-weight: semibold;
   color: #ffffff;
   margin-top: 10px;
-  
 }
-.doctores{
+
+.doctores {
   position: absolute;
   bottom: -5px;
   left: 0;
 }
+
 .doctores img {
   max-width: 115%;
   height: auto;
@@ -68,6 +77,7 @@ body {
   padding: 40px;
   background-color: #ffffff;
 }
+
 .login-form {
   width: 100%;
   max-width: 75%;
@@ -150,6 +160,7 @@ body {
   display: flex;
   justify-content: space-between;
 }
+
 .social-btn {
   display: flex;
   align-items: center;
@@ -172,4 +183,54 @@ body {
 
 .social-btn:hover {
   background-color: #f8f9fa;
+}
+
+
+/* Media Queries para Responsividad */
+
+/* Pantallas mayores a 1440px */
+@media (min-width: 1440px) {
+  .left-section, .right-section {
+    max-width: 50%; 
+  }
+  
+  .doctores {
+    width: 100%;
+  }
+  .doctores img {
+    width: 115%;
+  }
+}
+
+/* Pantallas menores a 1024px */
+@media (max-width: 1024px) {
+  .left-section {
+    display: none;
+  }
+  .right-section {
+    width: 100%;
+    max-width: 100%; 
+    height: auto;
+  }
+
+  .doctores img {
+    max-width: 90%;
+  }
+}
+
+/* Pantallas menores a 768px */
+@media (max-width: 768px) {
+  .right-header h1 {
+    font-size: 2.5rem; 
+  }
+
+  .form-group input {
+    font-size: 0.9rem;
+    padding: 10px;
+  }
+
+  .social-btn img {
+    width: 16px;
+    height: 16px;
+  }
 }
