--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -21,20 +21,20 @@
         
         <form>
           <div class="form-group">
-            <label for="email">Email address</label>
+            <label for="correo">Email address</label>
             <input type="email" id="email" placeholder="Introduzca su email">
           </div>
           <div class="form-group">
-            <label for="phone">Teléfono</label>
+            <label for="telefono">Teléfono</label>
             <input type="text" id="phone" placeholder="Introduzca su teléfono">
           </div>
           <div class="form-group">
-            <label for="password">Contraseña</label>
+            <label for="contraseña">Contraseña</label>
             <input type="password" id="password" placeholder="Introduzca su fecha de contraseña">
           </div>
           <div class="form-group">
-            <label for="phone">Fecha de Nacimiento</label>
-            <input type="text" id="phone" placeholder="Introduzca su fecha de nacimiento">
+            <label for="nacimiento">Fecha de Nacimiento</label>
+            <input type="date" id="date" placeholder="Introduzca su fecha de nacimiento">
           </div>
           <button type="submit" class="btn-primary">Registrate</button>
           <div class="form-options">
