--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
 <!-- <app-login /> -->
 <!-- <app-registro /> -->
 <app-baner />
+<br>
+<br>
+<br>
+<div class="cont-info-doctors">
+  <app-info-doctor />
+  <app-info-doctor />
+  <app-info-doctor />
+
+</div>
