add component find-nav

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
-<!-- <app-login /> -->
-<!-- <app-registro /> -->
+<!-- <app-login />
+<app-registro /> -->
 <app-baner />
 <br>
 <br>
 <br>
-<div class="cont-info-doctors">
+<!-- <div class="cont-info-doctors">
   <app-info-doctor />
   <app-info-doctor />
   <app-info-doctor />
 
-</div>
+</div> -->
