add component app-nearby-doctors-disabled and update app component to include multiple instances

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,4 +12,8 @@
 
 </div> -->
 
-<app-nearby-doctors />
+<div class="cont-info-doctors">
+  <app-nearby-doctors />
+  <app-nearby-doctors />
+  <app-nearby-doctors />
+</div>
