add nearby-doctors component with styling and update app component to include it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,14 +5,15 @@
 <br>
 <br>
 <br>
-<!-- <div class="cont-info-doctors">
+<div class="cont-info-doctors">
   <app-info-doctor />
   <app-info-doctor />
   <app-info-doctor />
 
-</div> -->
+</div>
 
 <div class="cont-info-doctors">
+
   <app-nearby-doctors />
   <app-nearby-doctors />
   <app-nearby-doctors />
