--- a/src/app/nearby-doctors/nearby-doctors.component.html
+++ b/src/app/nearby-doctors/nearby-doctors.component.html
@@ -1,1 +1,25 @@
-<p>nearby-doctors works!</p>
+<div class="card">
+
+  <div class="card-content">
+    <div class="top">
+      <div class="cont-img">
+        <img src="img/Nearby.png" alt="Office image">
+      </div>
+      <div class="text">
+        <h4>Aline Carvalho</h4>
+        <p>Heart health</p>
+      </div>
+    </div>
+
+    <div class="location">
+      <div>
+        <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24"><path fill="#7A7D84" d="M12 2c-4.4 0-8 3.6-8 8c0 5.4 7 11.5 7.3 11.8c.2.1.5.2.7.2s.5-.1.7-.2C13 21.5 20 15.4 20 10c0-4.4-3.6-8-8-8m0 17.7c-2.1-2-6-6.3-6-9.7c0-3.3 2.7-6 6-6s6 2.7 6 6s-3.9 7.7-6 9.7M12 6c-2.2 0-4 1.8-4 4s1.8 4 4 4s4-1.8 4-4s-1.8-4-4-4m0 6c-1.1 0-2-.9-2-2s.9-2 2-2s2 .9 2 2s-.9 2-2 2"/></svg>
+      </div>
+      <div class="text-location">
+        <span class="kilometros">1 km</span>
+        <span> Rua São Salvador 57, Braga</span>
+      </div>
+
+    </div>
+  </div>
+</div>
