--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -16,7 +16,7 @@
       <div class="login-form">
         <div class="right-header">
             <h1>Crear Cuenta</h1>
-            <p>¿Ya conoces Hospital Vita? <a href="#">Inicia sesion</a></p>
+            <p>¿Ya conoces Hospital Vita? <a href="/login">Inicia sesion</a></p>
         </div>
         
         <form>
