--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,7 +4,9 @@
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
 }
-
+.contenido {
+    padding:0 150px ;
+}
 .cont-info-doctors {
     display: flex;
     justify-content: space-between;
