--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,7 +16,7 @@
       <div class="login-form">
         <div class="right-header">
           <h1>Inicio de Sesión</h1>
-          <p>¿Nuevo en Hospital Vita? <a href="#">Registrate</a></p>
+          <p>¿Nuevo en Hospital Vita? <a href="/registro">Registrate</a></p>
         </div>
         
         <form>
