--- a/src/app/nav-before-login/nav-before-login.component.html
+++ b/src/app/nav-before-login/nav-before-login.component.html
@@ -6,7 +6,7 @@
         <h1>Hospital Vita</h1>
     </div>
     <div class="options">
-        <a href="#" class="link-login">Login</a>
-        <button class="boton-registro">Registro</button>
+        <a href="/login" routerLink="/login" class="link-login">Login</a>
+        <button onclick="window.location.href='/registro'" class="boton-registro">Registro</button>
     </div>
 </div>
