--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,9 +5,10 @@
     font-family: 'Inter', sans-serif;
 }
 .contenido {
-    padding:0 150px ;
+    padding:0 10% ;
 }
 .cont-info-doctors {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
