--- a/src/app/login/login/login.component.css
+++ b/src/app/login/login/login.component.css
@@ -15,7 +15,7 @@ body {
 
 /* Left Section */
 .left-section {
-  background-image: url(../../../public/img/Fondo_curbo_del_login_y_registro.png);
+  background-image: url(../../../../public/img/Fondo_curbo_del_login_y_registro.png);
   background-color: #B0B9BC;
   background-repeat: no-repeat;
   background-size: cover;
