Traduciendo los apartados de la web al español

--- a/src/app/baner/baner.component.html
+++ b/src/app/baner/baner.component.html
@@ -1,7 +1,7 @@
 <div class="cont-baner">
     <div class="rigth">
-        <h2>No need to visit local hospitals Get your consultation online</h2>
-        <p>Audio/text/video/in-person</p>
+        <h2>¡Pide ahora tu cita!</h2>
+        <p>Contamos con los mejores especialistas listos para atenderte.</p>
         <div class="online-doctors">
             <div class="img-group">
                 <div class="doc-1">
@@ -13,7 +13,7 @@
                 <div class="doc-3">
                     <img src="img/Doctor_group_3.png" alt="doctor-1">
                 </div>
-                <div class="text">+180 doctors are online</div>
+                <div class="text">+200 doctores registrados</div>
             </div>
         </div>
     </div>
