--- a/src/app/login/registro/registro.component.html
+++ b/src/app/login/registro/registro.component.html
@@ -4,7 +4,7 @@
     <div class="left-section">
       <div class="logo">
         <img src="img/logo.png" alt="logo">
-        <span>Hospital vita</span>
+        <span>Hospital Jakarta</span>
       </div>
       <div class="doctores">
         <img src="img/Medicos_del_login_y_registro.png" alt="Médicos" >
@@ -15,17 +15,17 @@
     <div class="right-section">
       <div class="login-form">
         <div class="right-header">
-            <h1>Crear Cuenta</h1>
-            <p>¿Ya conoces Hospital Vita? <a href="/login">Inicia sesion</a></p>
+            <h1>Crear cuenta</h1>
+            <p>¿Ya tienes cuenta? <a href="/login">Inicia sesion</a></p>
         </div>
         
         <form>
           <div class="form-group">
-            <label for="correo">Email address</label>
+            <label for="correo">Email</label>
             <input type="email" id="email" placeholder="Introduzca su email">
           </div>
           <div class="form-group">
-            <label for="telefono">Teléfono</label>
+            <label for="telefono">Número de teléfono</label>
             <input type="text" id="phone" placeholder="Introduzca su teléfono">
           </div>
           <div class="form-group">
@@ -33,15 +33,15 @@
             <input type="password" id="password" placeholder="Introduzca su fecha de contraseña">
           </div>
           <div class="form-group">
-            <label for="nacimiento">Fecha de Nacimiento</label>
+            <label for="nacimiento">Fecha de nacimiento</label>
             <input type="date" id="date" placeholder="Introduzca su fecha de nacimiento">
           </div>
-          <button type="submit" class="btn-primary">Registrate</button>
+          <button type="submit" class="btn-primary">Registrarme</button>
           <div class="form-options">
-            <label><input type="checkbox"> Recuerdame</label>
+            <label><input type="checkbox"> Recuérdame</label>
           </div>
           <div class="divider">
-            <span>O continua con</span>
+            <span>O regístrate con</span>
           </div>
           <div class="social-btn-group">
             <button type="button" class="social-btn">
