--- a/src/app/nearby-doctors/nearby-doctors.component.html
+++ b/src/app/nearby-doctors/nearby-doctors.component.html
@@ -7,7 +7,7 @@
       </div>
       <div class="text">
         <h4>Aline Carvalho</h4>
-        <p>Heart health</p>
+        <p>Neumólogo</p>
       </div>
     </div>
 
@@ -17,7 +17,7 @@
       </div>
       <div class="text-location">
         <span class="kilometros">1 km</span>
-        <span> Rua São Salvador 57, Braga</span>
+        <span> Calle de O’Donnell 18, Retiro </span>
       </div>
 
     </div>
