--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -4,7 +4,7 @@
     <div class="left-section">
       <div class="logo">
         <img src="img/logo.png" alt="logo">
-        <span>Hospital vita</span>
+        <span>Hospital Jakarta</span>
       </div>
       <div class="doctores">
         <img src="img/Medicos_del_login_y_registro.png" alt="Médicos" >
@@ -16,7 +16,7 @@
       <div class="login-form">
         <div class="right-header">
           <h1>Inicio de Sesión</h1>
-          <p>¿Nuevo en Hospital Vita? <a href="/registro">Registrate</a></p>
+          <p>¿No tienes cuenta todavía? <a href="/registro">Registrate</a></p>
         </div>
         
         <form>
@@ -25,16 +25,16 @@
             <input type="email" id="email" placeholder="Enter your email">
           </div>
           <div class="form-group">
-            <label for="password">Password</label>
+            <label for="password">Contraseña</label>
             <input type="password" id="password" placeholder="Enter your password">
           </div>
           <button type="submit" class="btn-primary">Login</button>
           <div class="form-options">
-            <label><input type="checkbox"> Recuerdame</label>
+            <label><input type="checkbox"> Recuérdame</label>
             <a href="#">¿He olvidado mi contraseña?</a>
           </div>
           <div class="divider">
-            <span>O continua con</span>
+            <span>O inicia sesión con</span>
           </div>
           <div  class="social-btn-group">
             <button type="button" class="social-btn">
