Mejorando los estilos del baner

--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -31,7 +31,7 @@
           <button type="submit" class="btn-primary">Login</button>
           <div class="form-options">
             <label><input type="checkbox"> Recuérdame</label>
-            <a href="#">¿He olvidado mi contraseña?</a>
+            <a href="#">He olvidado mi contraseña</a>
           </div>
           <div class="divider">
             <span>O inicia sesión con</span>
