--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,3 +16,10 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+app-info-doctor {
+    width: 32%;
+}
+
+app-nearby-doctors {
+    width: 32%;
+}
