--- a/src/app/baner/baner.component.css
+++ b/src/app/baner/baner.component.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 270px;
+    height: 370px;
     margin: 30px 0;
     background-image: url(../../../public/img/Background_baner.png);
     background-repeat: no-repeat;
@@ -18,17 +18,19 @@
     flex: 1;
     color: #ffffff;
     padding: 20px;
+    margin-left: 20px;
+    margin-bottom: 60px;
 }
 
 .rigth h2 {
-    font-size: 30px;
+    font-size: 40px;
     font-weight: bold;
     line-height: 1.4;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .rigth p {
-    font-size: 16px;
+    font-size: 20px;
     color: #ffffff;
     margin-bottom: 20px;
     
@@ -49,8 +51,8 @@
 .img-group .doc-1,
 .img-group .doc-2,
 .img-group .doc-3 {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     overflow: hidden;
     position: relative;
@@ -80,7 +82,7 @@
 }
 
 .img-group .text {
-    font-size: 14px;
+    font-size: 18px;
     color: #ffffff;
     margin-left: 7px;
 }
