--- a/src/app/info-doctor/info-doctor.component.css
+++ b/src/app/info-doctor/info-doctor.component.css
@@ -2,7 +2,7 @@
   background: white;
   border-radius: 10px;
   border: solid 1.5px #e1e1e1;
-  width: 400px;
+  width: 100%;
   padding:22px;
   box-sizing: border-box;
 }
