--- a/src/app/navs/nav-before-login/nav-before-login.component.css
+++ b/src/app/navs/nav-before-login/nav-before-login.component.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -48,4 +48,4 @@ h1 {
 
 .link-login:hover {
     color: #096c8a;
-}
+} */
