--- a/src/app/nearby-doctors/nearby-doctors-disabled/nearby-doctors-disabled.component.css
+++ b/src/app/nearby-doctors/nearby-doctors-disabled/nearby-doctors-disabled.component.css
@@ -1,4 +1,4 @@
-.contenedor {
+/* .contenedor {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,4 +16,4 @@ span {
 }
 .enlace {
   color: #3B9AB8;
-}
+} */
