--- a/src/app/nearby-doctors/nearby-doctors/nearby-doctors.component.css
+++ b/src/app/nearby-doctors/nearby-doctors/nearby-doctors.component.css
@@ -1,4 +1,4 @@
-.card {
+/* .card {
   background: #fff;
   border: 1.5px solid #e1e1e1;
   border-radius: 12px;
@@ -69,6 +69,6 @@
 }
 .kilometros {
   margin-bottom: 5px;
-}
+} */
 
 
