--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -22,4 +22,4 @@ app-info-doctor {
 
 app-nearby-doctors {
     width: 32%;
-}
+} */
