--- a/src/app/baner/baner.component.html
+++ b/src/app/baner/baner.component.html
@@ -1,4 +1,4 @@
-<div class="cont-baner">
+<!-- <div class="cont-baner">
     <div class="rigth">
         <h2>¡Pide ahora tu cita!</h2>
         <p>Contamos con los mejores especialistas listos para atenderte.</p>
@@ -20,6 +20,34 @@
     <div class="left">
         <div class="doctores">
             <img src="img/Doctores_baner.png" alt="">
+        </div>
+    </div>
+    <app-find-nav />
+</div> -->
+
+<!-- TAILWIND -->
+<div class="cont-baner relative flex justify-between items-center h-[370px] my-8 bg-cover bg-no-repeat rounded-3xl shadow-lg gap-5">
+    <div class="rigth flex-1 text-white px-5 mb-16 ml-5">
+        <h2 class="text-4xl font-bold leading-tight mb-4">¡Pide ahora tu cita!</h2>
+        <p class="text-lg mb-5">Contamos con los mejores especialistas listos para atenderte.</p>
+        <div class="online-doctors flex items-center">
+            <div class="img-group flex items-center gap-2 relative">
+                <div class="doc-1 w-12 h-12 rounded-full overflow-hidden relative shadow-md z-30">
+                    <img src="img/Doctor_group_1.png" alt="doctor-1" class="w-full h-full object-cover">
+                </div>
+                <div class="doc-2 w-12 h-12 rounded-full overflow-hidden relative shadow-md -ml-5 z-20">
+                    <img src="img/Doctor_group_2.png" alt="doctor-2" class="w-full h-full object-cover">
+                </div>
+                <div class="doc-3 w-12 h-12 rounded-full overflow-hidden relative shadow-md -ml-5 z-10">
+                    <img src="img/Doctor_group_3.png" alt="doctor-3" class="w-full h-full object-cover">
+                </div>
+                <div class="text text-lg ml-2">+200 doctores registrados</div>
+            </div>
+        </div>
+    </div>
+    <div class="left flex-1 flex justify-end">
+        <div class="doctores absolute bottom-[-4px] right-0">
+            <img src="img/Doctores_baner.png" alt="doctores-baner" class="max-w-full h-auto rounded-lg">
         </div>
     </div>
     <app-find-nav />
