--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,55 +1,57 @@
+<div class="bg-white dark:bg-gray-900">
+  <div class="flex justify-center h-screen">
+      <div class="hidden bg-cover lg:block lg:w-2/3" style="background-image: url(https://images.unsplash.com/photo-1589917030663-849c7fe96c2b?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)">
+          <div class="flex items-center h-full px-20 bg-gray-900 bg-opacity-40">
+              <div>
+                  <h2 class="text-2xl font-bold text-white sm:text-3xl">Hospital Jakarta</h2>
 
-<div class="container">
-    <!-- Left Section -->
-    <div class="left-section">
-      <div class="logo">
-        <img src="img/logo.png" alt="logo">
-        <span>Hospital Jakarta</span>
+                  <p class="max-w-xl mt-3 text-gray-300">
+                    Inicia sesión para acceder a consultas online con médicos cercanos. Disfruta de atención médica de calidad desde la comodidad de tu hogar. Gestiona tus citas y recibe atención de manera rápida y segura.
+                  </p>
+              </div>
+          </div>
       </div>
-      <div class="doctores">
-        <img src="img/Medicos_del_login_y_registro.png" alt="Médicos" >
+
+      <div class="flex items-center w-full max-w-md px-6 mx-auto lg:w-2/6">
+          <div class="flex-1">
+              <div class="text-center">
+                  <div class="flex justify-center mx-auto">
+                    <img src="img/logo-login.png" alt="logo">
+                  </div>
+
+                  <p class="my-5 text-xl text-gray-500 dark:text-gray-300">Inicia sesión para acceder a tu cuenta</p>
+              </div>
+
+              <div class="mt-8">
+                  <form>
+                      <div>
+                          <label for="email" class="block mb-2 text-sm text-gray-600 dark:text-gray-200">Email</label>
+                          <input type="email" name="email" id="email" placeholder="ejemplo@ejemplo.com" class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                      </div>
+
+                      <div class="mt-6">
+                          <div class="flex justify-between mb-2">
+                              <label for="password" class="text-sm text-gray-600 dark:text-gray-200">Contraseña</label>
+                              <a href="#" class="text-sm text-[#3b9ab8] focus:text-blue-500 hover:underline">He olvidado mi contraseña</a>
+                          </div>
+
+                          <input type="password" name="password" id="password" placeholder="Tu contraseña" class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg dark:placeholder-gray-600 dark:bg-gray-900 dark:text-gray-300 dark:border-gray-700 focus:border-blue-400 dark:focus:border-blue-400 focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                      </div>
+
+                      <div class="mt-6">
+                          <button class="w-full px-4 py-2 tracking-wide text-white transition-colors duration-300 transform bg-[#3b9ab8] rounded-lg cursor-pointer transition-colors duration-300 hover:bg-[#26738b] focus:outline-none focus:bg-blue-400 focus:ring focus:ring-blue-300 focus:ring-opacity-50">
+                            Iniciar sesión
+                          </button>
+                      </div>
+
+                  </form>
+
+                  <p class="mt-6 text-sm text-center text-gray-400">¿No tienes cuenta todavía? <a href="/registro" class="text-[#3b9ab8] focus:outline-none focus:underline hover:underline">Regístrate</a>.</p>
+              </div>
+          </div>
       </div>
-    </div>
-  
-    <!-- Right Section -->
-    <div class="right-section">
-      <div class="login-form">
-        <div class="right-header">
-          <h1>Inicio de Sesión</h1>
-          <p>¿No tienes cuenta todavía? <a href="/registro">Registrate</a></p>
-        </div>
-        
-        <form>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Enter your email">
-          </div>
-          <div class="form-group">
-            <label for="password">Contraseña</label>
-            <input type="password" id="password" placeholder="Enter your password">
-          </div>
-          <button type="submit" class="btn-primary">Login</button>
-          <div class="form-options">
-            <label><input type="checkbox"> Recuérdame</label>
-            <a href="#">He olvidado mi contraseña</a>
-          </div>
-          <div class="divider">
-            <span>O inicia sesión con</span>
-          </div>
-          <div  class="social-btn-group">
-            <button type="button" class="social-btn">
-              <img src="https://www.google.com/favicon.ico" alt="Google">
-            </button>
-            <button type="button" class="social-btn">
-              <img src="https://www.facebook.com/favicon.ico" alt="Facebook">
-            </button>
-            <button type="button" class="social-btn">
-              <img src="https://www.apple.com/favicon.ico" alt="Apple">
-            </button>
-          </div>
-          
-        </form>
-      </div>
-    </div>
+
+      <!-- X para cerrar o redirigir a la página principal -->
+      <a href="/" class="absolute top-3 right-6 text-3xl text-gray-700 hover:text-gray-900 dark:text-white dark:hover:text-gray-300">&times;</a>
   </div>
-  
+</div>
