Ajustes en la barra de navegación: reubicación y cambios en estilos

--- a/src/app/baner/baner.component.html
+++ b/src/app/baner/baner.component.html
@@ -50,5 +50,8 @@
             <img src="img/Doctores_baner.png" alt="doctores-baner" class="max-w-full h-auto rounded-lg">
         </div>
     </div>
-    <app-find-nav />
+    <div class="w-[60%] absolute bottom-[-30px] left-[50%] translate-x-[-50%]">
+        <app-find-nav />
+    </div>
+
 </div>
