--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 @if (!esPaginaDeAutenticacion()) {
   <app-nav-before-login></app-nav-before-login>
-  <app-secundary-nav></app-secundary-nav>
   <div class="contenido px-[10%]">
     <app-baner></app-baner>
     <br>
@@ -28,4 +27,4 @@
 
 }
 <router-outlet></router-outlet>
-<app-left-nav></app-left-nav>
+<!-- <app-left-nav></app-left-nav> -->
