Index logueado terminado

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,7 +17,7 @@
         <div class="pb-5">
             <div class="pb-7 font-bold">¡Contáctanos!</div>
             <div>Teléfono: (+34) 912 345 678</div>
-            <div>email: soporte&#64;hospitaljakarta.com</div>
+            <div>Email: soporte&#64;hospitaljakarta.com</div>
             <div>España</div>
         </div>
         <div class="pb-5">
