--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,37 @@
-@if (!esPaginaDeAutenticacion()) {
-  <app-nav-before-login></app-nav-before-login>
-  <app-secundary-nav></app-secundary-nav>
-  <div class="contenido px-[10%]">
+<!-- @if (!esPaginaDeAutenticacion()) { -->
+<app-nav-before-login></app-nav-before-login>
+
+<div class="contenido px-[10%] mb-6">
+  <div class="container-baner relative">
     <app-baner></app-baner>
-    <br>
-    <h3 class="titulos text-2xl font-semibold my-6">Doctores Recomendados</h3>
-    <div class="cont-info-doctors flex flex-wrap justify-between">
-      <app-info-doctor class="w-[32%]"></app-info-doctor>
-      <app-info-doctor class="w-[32%]"></app-info-doctor>
-      <app-info-doctor class="w-[32%]"></app-info-doctor>
+    <div class="w-[60%] absolute bottom-[-30px] left-[50%] translate-x-[-50%]">
+      <app-find-nav />
     </div>
-    <br>
+  </div>  
 
-    <h3 class="titulos text-2xl font-semibold my-6">Doctores Cercanos a ti</h3>
-    @if (isNerbyDoctorsAvailable) {
-      <div class="cont-info-doctors flex flex-wrap justify-between">
-        <app-nearby-doctors class="w-[32%]"></app-nearby-doctors>
-        <app-nearby-doctors class="w-[32%]"></app-nearby-doctors>
-        <app-nearby-doctors class="w-[32%]"></app-nearby-doctors>
-      </div>
-    } @else {
-      <app-nearby-doctors-disabled (habilitarNerbyDoctors)="cambiarEstado()"></app-nearby-doctors-disabled>
-    }
-
+  <br>
+  <h3 class="titulos text-2xl font-semibold my-6">Doctores Recomendados</h3>
+  <div class="cont-info-doctors flex flex-wrap justify-between">
+    <app-info-doctor class="w-[32%]"></app-info-doctor>
+    <app-info-doctor class="w-[32%]"></app-info-doctor>
+    <app-info-doctor class="w-[32%]"></app-info-doctor>
   </div>
-   <app-footer></app-footer>
+  <br>
 
-}
+  <h3 class="titulos text-2xl font-semibold my-6">Doctores Cercanos a ti</h3>
+  @if (isNerbyDoctorsAvailable) {
+  <div class="cont-info-doctors flex flex-wrap justify-between">
+    <app-nearby-doctors class="w-[32%]"></app-nearby-doctors>
+    <app-nearby-doctors class="w-[32%]"></app-nearby-doctors>
+    <app-nearby-doctors class="w-[32%]"></app-nearby-doctors>
+  </div>
+  } @else {
+  <app-nearby-doctors-disabled (habilitarNerbyDoctors)="cambiarEstado()"></app-nearby-doctors-disabled>
+  }
+
+</div>
+<app-footer></app-footer>
+
+<!-- } -->
 <router-outlet></router-outlet>
-<app-left-nav></app-left-nav>
+<app-index-after-login></app-index-after-login>
