--- a/src/app/sections/baner/baner.component.css
+++ b/src/app/sections/baner/baner.component.css
@@ -5,7 +5,7 @@
     align-items: center;
     height: 370px;
     margin: 30px 0; */
-    background-image: url(../../../public/img/Background_baner.png);
+    background-image: url(../../../../public/img/Background_baner.png);
     background-repeat: no-repeat;
     background-size: cover;
     /* border-radius: 25px;
