--- a/src/app/sections/lista-citas/cita/cita.component.html
+++ b/src/app/sections/lista-citas/cita/cita.component.html
@@ -4,10 +4,23 @@
         <p class="text-[20px]">14</p>
     </div>
     <div>
-        <p class="font-semibold text-gray-800">Dr. Ashton Cleve</p>
-        <p class="text-sm text-gray-600">10:00 - 10:30</p>
+        
+         <div class="flex gap-2">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"><circle cx="12" cy="12" r="9"/><path d="M11 8v5h5"/></g></svg>
+            <p class="font-semibold text-gray-800" >10:00 - 10:30</p>
+         </div> 
+         <div class="flex gap-2"> 
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><path fill="currentColor" d="M11 7c0 1.66-1.34 3-3 3S5 8.66 5 7s1.34-3 3-3s3 1.34 3 3"/><path fill="currentColor" fill-rule="evenodd" d="M16 8c0 4.42-3.58 8-8 8s-8-3.58-8-8s3.58-8 8-8s8 3.58 8 8M4 13.75C4.16 13.484 5.71 11 7.99 11c2.27 0 3.83 2.49 3.99 2.75A6.98 6.98 0 0 0 14.99 8c0-3.87-3.13-7-7-7s-7 3.13-7 7c0 2.38 1.19 4.49 3.01 5.75" clip-rule="evenodd"/></svg>
+            <p class="text-sm text-gray-600">Dr. Ashton Cleve</p>
+        </div>
+        
     </div>
-    <button>
+    <div>
+        <p class="font-semibold text-gray-800">Motivo: analisis</p>
+        <p class="text-sm text-gray-600"><a href="">Ver Documento</a></p>
+    </div>
+    <button class="flex hover:bg-[#ffffff] bg-[#f8f8f8] p-2">
+        <p>Editar</p>
         <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24"
             stroke-width="2">
             <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
