--- a/src/app/vistas/vistas-citas/vistas-citas.component.html
+++ b/src/app/vistas/vistas-citas/vistas-citas.component.html
@@ -1,5 +1,5 @@
 <div class="grid grid-cols-[250px_1fr] h-screen">
-    <div class="bg-gray-200 p-4">
+    <div>
       <app-left-nav></app-left-nav>
     </div>
     <div class="p-4 flex flex-col">
