--- a/src/app/navs/secundary-nav/secundary-nav.component.html
+++ b/src/app/navs/secundary-nav/secundary-nav.component.html
@@ -1,11 +1,13 @@
-<nav class="flex items-center justify-between pt-6 px-4">
+<nav class="flex items-center justify-between pt-6 pb-6">
   <div class="ml-4 text-lg">
     <p class="text-gray-500 font-medium">Hola, Pepe dux</p>
     <p class="font-extrabold text-2xl">Citas</p>
   </div>
-  <div class="find-nav flex-1 flex justify-center">
-    <app-find-nav class="w-2/3"></app-find-nav>
-  </div>
+  @if (withFindNav) {
+    <div class="find-nav flex-1 flex justify-center">
+      <app-find-nav class="w-2/3"></app-find-nav>
+    </div>
+  }
   <div class="flex items-center">
     <div class="mr-6 cursor-pointer">ES &#x25BE;</div>
     <div class="relative mr-6">
