--- a/src/app/vistas/patient-booking/patient-booking.component.html
+++ b/src/app/vistas/patient-booking/patient-booking.component.html
@@ -1,5 +1,9 @@
 
-<app-secundary-nav></app-secundary-nav>
+<nav class="flex items-center justify-between pt-6 pb-6">
+  <app-title-jakarta />
+  <app-user-nav />
+</nav>
+
 
 <div class="flex justify-center items-center w-full h-screen bg-gray-100">
   <div class="flex p-5 w-4/5 bg-white rounded-lg shadow-md">
