añadiendo las rutas para la navegacion entre vistas y eliminando css

--- a/src/app/sections/info-doctor/info-doctor.component.html
+++ b/src/app/sections/info-doctor/info-doctor.component.html
@@ -14,7 +14,7 @@
       </div>
       <div class="time-rigt">
         <span>Martes, Jueves</span>
-        10:00-18:00 
+        10:00-18:00
       </div>
     </div>
     <div class="separador"></div>
@@ -43,7 +43,7 @@
       <span class="specialization">Pediatra</span>
     </div>
   </div>
-  
+
   <div class="details flex items-center border-t border-[#e1e1e1] pt-4 mt-4">
     <div class="time flex w-1/2 pr-4 border-r border-[#e1e1e1]">
       <div class="time-left mr-2 mt-1">
@@ -71,8 +71,8 @@
   </div>
 
   <div class="book-button mt-4 text-center">
-    <button class="w-full bg-[#3b9ab8] text-white border-none py-3 px-5 text-base font-light rounded-lg cursor-pointer transition-colors duration-300 hover:bg-[#26738b]">
-      Pedir cita
+    <button onclick="window.location.href='/nuevaCita'" class="w-full bg-[#3b9ab8] text-white border-none py-3 px-5 text-base font-light rounded-lg cursor-pointer transition-colors duration-300 hover:bg-[#26738b]">
+       Pedir cita
     </button>
   </div>
 </div>
