enlacecon pagina de citas y retoque de la pagina

--- a/src/app/vistas/index-after-login/index-after-login.component.html
+++ b/src/app/vistas/index-after-login/index-after-login.component.html
@@ -22,7 +22,7 @@
             <div class="container-right-section">
                 <div class="container-header flex items-center justify-between mb-4">
                     <h3 class="titulos text-2xl font-semibold ">Citas Programadas</h3>
-                    <a href="#" class="enlace text-[#3B9AB8]">Ver Todas ></a>
+                    <a href="/citas" routerLink="/citas" class="enlace text-[#3B9AB8]">Ver Todas ></a>
                 </div>
                 <app-lista-citas></app-lista-citas>
             </div>
