--- a/src/app/sections/lista-citas/cita/cita.component.html
+++ b/src/app/sections/lista-citas/cita/cita.component.html
@@ -1,28 +1,44 @@
-<div class="p-2 rounded-md flex items-center justify-between hover:bg-[#F6F6F6]">
-    <div class="fecha bg-[#EEF5DF] px-6 py-2 rounded-md">
+<div class="p-2 rounded-md flex items-center justify-between group hover:bg-[#F6F6F6] border border-[#E9E9E9]">
+    <div class="fecha bg-[#EEF5DF] px-6 py-2 rounded-md border-r border-[#E9E9E9]">
         <p>&nbsp;V</p>
         <p class="text-[20px]">14</p>
     </div>
+    <!-- ------------------------------------------- -->
     <div>
-        
-         <div class="flex gap-2">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"><circle cx="12" cy="12" r="9"/><path d="M11 8v5h5"/></g></svg>
-            <p class="font-semibold text-gray-800" >10:00 - 10:30</p>
-         </div> 
-         <div class="flex gap-2"> 
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><path fill="currentColor" d="M11 7c0 1.66-1.34 3-3 3S5 8.66 5 7s1.34-3 3-3s3 1.34 3 3"/><path fill="currentColor" fill-rule="evenodd" d="M16 8c0 4.42-3.58 8-8 8s-8-3.58-8-8s3.58-8 8-8s8 3.58 8 8M4 13.75C4.16 13.484 5.71 11 7.99 11c2.27 0 3.83 2.49 3.99 2.75A6.98 6.98 0 0 0 14.99 8c0-3.87-3.13-7-7-7s-7 3.13-7 7c0 2.38 1.19 4.49 3.01 5.75" clip-rule="evenodd"/></svg>
+        <!-- div inicio -->
+        <div class="flex gap-2 items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" viewBox="0 0 24 24">
+                <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1">
+                    <circle cx="12" cy="12" r="9"/>
+                    <path d="M11 8v5h5"/>
+                </g>
+            </svg>
+            <p class="font-semibold text-gray-800">10:00 - 10:30</p>
+        </div> 
+        <div class="flex gap-2 items-center">
+            <div class="flex items-center justify-center w-6 h-6"> <!-- Contenedor de íconos -->
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 16 16">
+                    <path fill="currentColor" d="M11 7c0 1.66-1.34 3-3 3S5 8.66 5 7s1.34-3 3-3s3 1.34 3 3"/>
+                    <path fill="currentColor" fill-rule="evenodd" d="M16 8c0 4.42-3.58 8-8 8s-8-3.58-8-8s3.58-8 8-8s8 3.58 8 8M4 13.75C4.16 13.484 5.71 11 7.99 11c2.27 0 3.83 2.49 3.99 2.75A6.98 6.98 0 0 0 14.99 8c0-3.87-3.13-7-7-7s-7 3.13-7 7c0 2.38 1.19 4.49 3.01 5.75" clip-rule="evenodd"/>
+                </svg>
+            </div>
             <p class="text-sm text-gray-600">Dr. Ashton Cleve</p>
         </div>
         
+        
+        <!-- div fin  -->
+        
     </div>
+<!-- --------------------------------------------------------------------------------------- -->
     <div>
-        <p class="font-semibold text-gray-800">Motivo: analisis</p>
-        <p class="text-sm text-gray-600"><a href="">Ver Documento</a></p>
+        <p class="font-semibold text-gray-800">Motivo: análisis</p>
+        <a href="#" class="text-sm text-[#3b9ab8] focus:text-blue-500 underline"> Ver Detalle</a>
     </div>
-    <button class="flex hover:bg-[#ffffff] bg-[#f8f8f8] p-2">
+    <!-- Botón Editar -->
+    <button class="flex group-hover:bg-[#ffffff] bg-[#f8f8f8] p-2 items-center justify-center">
         <p>Editar</p>
-        <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-            stroke-width="2">
+        <svg class="w-4 h-4 ml-2" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor"
+            viewBox="0 0 24 24" stroke-width="2">
             <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
         </svg>
     </button>
